overflow x iphone fix

--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,7 +1,8 @@
 .header {
     display: flex;
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
+    height: 15vh;
 
     &__containerLogo {
         flex: 1;
