--- a/src/assets/styles/components/main.scss
+++ b/src/assets/styles/components/main.scss
@@ -2,7 +2,9 @@
     position: relative;
     flex-grow: 1; 
     box-sizing: border-box;
-    overflow-y: hidden;
+    overflow: hidden;
+    height: 85vh;
+    min-width: 100vw;
     
     
    
