--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -2,10 +2,11 @@ body {
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    max-width: 100vw;
+    width: 100vw;
     height: 100vh;
     background-image: url(../img/nebu.jpg);
     background-size: cover;
-    overflow-x: hidden;
+    
+    
     
 }
